--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,10 @@ body {
     height: 200px;
 }
 
+.first
+    {
+    max-width:800px;
+    margin:0 auto;
+    font-family:sans-serif;
+    color:gray;
+    }
